--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "ngx-img-upload",
-  "version": "1.0.1",
-  "description": "angular 图片上传组件",
+  "name": "ngx-tag-manager",
+  "version": "1.0.0",
+  "description": "angular 标签管理弹窗组件",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "图片上传",
+    "标签管理弹窗组件",
     "angular",
     "ng-zerro-antd"
   ],
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@angular/core": "^8.2.14",
+    "@delon/abc": "8.8.0",
     "ng-zorro-antd": "^8.5.2"
   }
 }
