--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-tag-manager",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "angular 标签管理弹窗组件",
   "main": "index.js",
   "scripts": {
@@ -15,7 +15,11 @@
   "license": "MIT",
   "dependencies": {
     "@angular/core": "^8.2.14",
-    "@delon/abc": "8.8.0",
+    "@delon/abc": "^8.8.0",
     "ng-zorro-antd": "^8.5.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fengyinchao/ngx-tag-manager.git"
   }
 }
